# try_uv

./: .gitignore  Makefile  example.pyx  hello.py  pyproject.toml
src/: quicksort.py
