[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
]

[dependency-groups]
dev = [
    "cython>=3.0.11",
    "setuptools>=75.6.0",
]
